2006-07-10  Norm Jacobs <Norm.Jacobs@Sun.COM>

	* *: Removed executable permissions from source files which are
	  not executables

2006-06-15  Norm Jacobs <Norm.Jacobs@Sun.COM>

	* foomatid-rip.in: failing to open IPP attributes file shouldn't be
	  fatal

2006-06-01  Norm Jacobs <Norm.Jacobs@Sun.COM>

	* filter.conf: example of a preferred shell setting

	* foomatid-rip.in: detect and use a "modern" shell for shell commands

2006-05-17  Norm Jacobs <Norm.Jacobs@Sun.COM>

	* foomatic-rip.in: Add support for Solaris LP, made default echo,
	  fileconverter, and execpath setable through configure options.

	* foomatic-gswrapper.in: made default execpath setable through configure
          options

	* foomatic-rip-1.in: fixed to use @sysconfdir@ for configure

	* foomatic-gswrapper-1.in: fixed to use @sysconfdir@ for configure

	* configure.ac: made default execpath, fileconverter and echo setable
	  through configure options.  Generate man pages through configure

	* makeMan.in: removed, configure now generates the man pages

	* Makefile.in: cleaned up some to work with makes other than gmake

	* README, USAGE: added Solaris LP 

2006-01-06  Till Kamppeter <till.kamppeter@gmx.net>

	* beh.in: Fixed bug of N^2 copies being printed when N copies
	  were requested.

	* configure.in, configure.ac: Renamed configure.in to
	  configure.ac, to make the package working with the current
	  versions of aclocal and autoconf.

2005-11-13  Till Kamppeter <till.kamppeter@gmx.net>

	* README, USAGE, beh.in: Updated documentation, to take into
	  account beh and HPLIP, dropped HPOJ in the documentation.

2005-09-12  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-rip.in: Better support for non-PJL JCLs. If there are
	  Foomatic options of execution style JCL, they are only prefixed
	  with "@PJL " if the PPD does not contain a "*JCLBegin:"
	  expression not containing "PJL" and if the prefix is not
	  changed by a "*FoomaticJCLPrefix:" in the PPD file. If there